changed setup.cfg for aqua

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = pyspeedy
+name = pyspeedyaqua
 copyright = 2021, pySPEEDY developers
 author = Andrés Pérez Hortal, Sam Hatfield, Fred Kucharski, Franco Molteni
 version = 0.2.0
-description = Python interface for the SPEEDY model.
+description = Python interface for the SPEEDY model (Using aquaplanet boundary conditions).
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 classifiers =
@@ -11,7 +11,7 @@ classifiers =
     License :: Free for non-commercial use
     Programming Language :: Python :: 3
     Operating System :: Operating System :: POSIX :: Linux
-url = https://github.com/aperezhortal/pySPEEDY
+url = https://github.com/guidov/pySPEEDY-aqua
 
 [options]
 packages = find:
