--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 changedir = {homedir}
 commands =
     pip install -v -U {toxinidir}/
-    python -c "import pyspeedy"
+    python -c "import pyspeedyaqua"
 
 
 [testenv:test]
@@ -23,8 +23,8 @@ deps =
 changedir = {homedir}
 commands =
     {[testenv]commands}
-    python -c "from pyspeedy import Speedy"
-    python -c "from pyspeedy import MODEL_STATE_DEF"
-    pytest --pyargs pyspeedy -s -v --disable-warnings
+    python -c "from pyspeedyaqua import Speedy"
+    python -c "from pyspeedyaqua import MODEL_STATE_DEF"
+    pytest --pyargs pyspeedyaqua -s -v --disable-warnings
 
 
